<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="in_sopt">IN SOPT</string>

    <!-- General -->
    <string name="complete">완료</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_search">Search</string>

    <!-- Sign -->
    <string name="sign_in">로그인하기</string>
    <string name="sign_up">가입하기</string>

    <string name="sign_id_label">아이디</string>
    <string name="sign_id_hint">아이디를 입력해 주세요.</string>
    <string name="sign_email_label">이메일</string>
    <string name="sign_email_hint">이메일을 입력해 주세요.</string>
    <string name="sign_password_label">비밀번호</string>
    <string name="sign_password_hint">비밀번호를 입력해 주세요.</string>
    <string name="sign_mbti_label">mbti</string>
    <string name="sign_mbti_hint">mbti를 입력해 주세요.</string>
    <string name="sign_up_id_detail">영문, 숫자를 조합하여 6~10자리로 입력해 주세요.</string>
    <string name="sign_up_email_detail">이메일 형식을 다시 확인해 주세요.</string>
    <string name="sign_up_password_detail">영문, 숫자, 특수문자를 조합하여 6~12자리로 입력해 주세요.</string>
    <string name="sign_up_success_toast_message">회원가입을 완료했어요!</string>
    <string name="sign_up_failure_toast_message">앗, 회원가입에 실패했어요 🥲</string>
    <string name="sign_in_success_toast_message">로그인을 완료했어요!</string>
    <string name="sign_in_failure_toast_message">앗, 이메일과 패스워드를 다시 확인해 주세요 👀</string>

    <!-- Profile -->
    <string name="profile_info">내 정보</string>
    <string name="profile_info_age">Age</string>
    <string name="profile_info_mbti">MBTI</string>
    <string name="profile_info_part">Part</string>

    <string name="profile_education">학력</string>
    <string name="profile_info_major">%s&#160;&#160;&#160;&#160;<b>%s</b></string>

    <string name="profile_site">웹사이트</string>
    <string name="profile_info_github"><a href="https://github.com/youngjinc"><font color="#474747"><b><u>GitHub</u></b></font></a></string>
    <string name="profile_info_blog"><a href="https://velog.io/@zini"><font color="#474747"><b><u>Blog</u></b></font></a></string>

    <!-- Github -->
    <string name="github_repository">Repository</string>

    <!-- Follower -->
    <string name="follower_title">Followers</string>

    <!-- Music -->
    <string name="music_singer">가수</string>
    <string name="music_title">타이틀</string>
    <string name="music_playlist_title">%s님의 플레이리스트</string>
    <string name="music_posting_title">음악 추가하기</string>
    <string name="music_posting_singer_hint">가수명을 입력해 주세요.</string>
    <string name="music_posting_title_hint">타이틀을 입력해 주세요.</string>
    <string name="music_posting_success_toast_message">플레이리스트에 음악을 추가했습니다 🎧</string>
    <string name="music_posting_failure_toast_message">앗, 음악을 추가할 수 없어요! 잠시후 다시 시도해 주세요.</string>

    <!-- Part -->
    <string name="part_aos">Android</string>
    <string name="part_ios">IOS</string>
    <string name="part_web">Web</string>
    <string name="part_server">Server</string>
    <string name="part_design">Design</string>
    <string name="part_plan">Plan</string>
</resources>