<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.sample.presentation.sign.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.sign.SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacingBase" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacingBase" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingLarge"
                android:text="@string/in_sopt"
                android:textAppearance="@style/TextAppearance.Title.Large"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingLarge"
                android:text="@string/sign_email_label"
                android:textAppearance="@style/TextAppearance.TextView.Label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <EditText
                android:id="@+id/et_email"
                style="@style/Style.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:hint="@string/sign_email_hint"
                android:maxLines="1"
                android:text="@={viewModel.email}"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_email_label" />

            <TextView
                android:id="@+id/tv_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingBase"
                android:text="@string/sign_password_label"
                android:textAppearance="@style/TextAppearance.TextView.Label"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Style.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:hint="@string/sign_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_password_label" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacingBase"
                app:constraint_referenced_ids="btn_sign_in,btn_sign_up"
                app:flow_horizontalGap="@dimen/spacing12"
                app:flow_maxElementsWrap="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                style="@style/Style.RoundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.email.length() > 0 &amp;&amp; viewModel.password.length() > 0}"
                android:text="@string/sign_in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/Style.RoundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>