<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacingBase" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacingBase" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.Navigation.Button.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Widget.ToolbarTitle.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingBase"
            android:text="@string/sign_name_label"
            android:textAppearance="@style/Widget.TextView.Label.TextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/et_name"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/sign_name_hint"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label" />

        <TextView
            android:id="@+id/tv_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingBase"
            android:text="@string/sign_id_label"
            android:textAppearance="@style/Widget.TextView.Label.TextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_id"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/sign_id_hint"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/tv_id_label" />

        <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingBase"
            android:text="@string/sign_password_label"
            android:textAppearance="@style/Widget.TextView.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/et_id" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/sign_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/tv_password_label" />

        <TextView
            android:id="@+id/tv_mbti_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingBase"
            android:text="@string/sign_mbti_label"
            android:textAppearance="@style/Widget.TextView.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_mbti"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/sign_mbti_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/tv_mbti_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            style="@style/Widget.RoundButton.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacingBase"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>